[project]
name = "eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
]
